--- a/1_preprocessing/user_analysis_v2.ipynb
+++ b/1_preprocessing/user_analysis_v2.ipynb
@@ -27,7 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "def getWordsDict(texts, category='inRange'):\n",
+    "def getWordsDict(texts):\n",
     "    global stop_words\n",
     "    wordDict = dict()\n",
     "    stopwordDict = dict()\n",
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 380,
    "metadata": {
     "scrolled": true
    },
@@ -186,7 +186,207 @@
     "with open('../0_dataset/ordinary_ids') as r:\n",
     "    for ordinary in r.readlines()[:100]:\n",
     "        ordinary = ordinary.strip()\n",
-    "        ordinarys[patient] = Ordinary(ordinary)"
+    "        ordinarys[ordinary] = Ordinary(ordinary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = [[],[],[],[]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in patients:\n",
+    "    _w, _s, _sc = getWordsDict(patients[key].getText())\n",
+    "    total[0].append(key)\n",
+    "    total[1].append(sum(_s.values()))\n",
+    "    total[2].append(_sc)\n",
+    "    total[3].append(len(patients[key].inRangeDf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly\n",
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "plotly.tools.set_credentials_file(username='Adeline', api_key='Z5eltNtBQXqvI05ZFQtz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x = list(range(len(total[0])))\n",
+    "_y = list()\n",
+    "_z = total[0]\n",
+    "for i, s in enumerate(total[1]):\n",
+    "    try:\n",
+    "        _y.append(round(s/total[2][i],1))\n",
+    "    except ZeroDivisionError:\n",
+    "        _y.append(0)\n",
+    "\n",
+    "trace = go.Scatter(\n",
+    "    x = _x,\n",
+    "    y = _y,\n",
+    "    hoverinfo='text',\n",
+    "    text=_z,\n",
+    "    mode = 'lines'\n",
+    ")\n",
+    "data = [trace]\n",
+    "layout = go.Layout(\n",
+    "    title='Stopwords 佔每人每篇推文的數量',\n",
+    "    xaxis=dict(\n",
+    "        title='',\n",
+    "        titlefont=dict(\n",
+    "            family='Courier New, monospace',\n",
+    "            size=18,\n",
+    "            color='#7f7f7f'\n",
+    "        )\n",
+    "    ),\n",
+    "    yaxis=dict(\n",
+    "        title='Stopwords 數量',\n",
+    "        titlefont=dict(\n",
+    "            family='Courier New, monospace',\n",
+    "            size=18,\n",
+    "            color='#7f7f7f'\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "fig = go.Figure(data=data, layout=layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Adeline/152.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 398,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py.iplot(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "total2 = [[],[],[],[]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for key in ordinarys:\n",
+    "    _w, _s, _sc = getWordsDict(ordinarys[key].getText())\n",
+    "    total2[0].append(key)\n",
+    "    total2[1].append(sum(_s.values()))\n",
+    "    total2[2].append(_sc)\n",
+    "    total2[3].append(len(ordinarys[key].inRangeDf))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "_x = list(range(len(total2[0])))\n",
+    "_y = list()\n",
+    "_z = total2[0]\n",
+    "for i, s in enumerate(total2[1]):\n",
+    "    try:\n",
+    "        _y.append(round(s/total2[2][i],1))\n",
+    "    except ZeroDivisionError:\n",
+    "        _y.append(0)\n",
+    "\n",
+    "trace = go.Scatter(\n",
+    "    x = _x,\n",
+    "    y = _y,\n",
+    "    hoverinfo='text',\n",
+    "    mode = 'lines',\n",
+    "    text=_z\n",
+    ")\n",
+    "data = [trace]\n",
+    "layout = go.Layout(\n",
+    "    title='Stopwords 佔每人每篇推文的數量',\n",
+    "    xaxis=dict(\n",
+    "        title='',\n",
+    "        titlefont=dict(\n",
+    "            family='Courier New, monospace',\n",
+    "            size=18,\n",
+    "            color='#7f7f7f'\n",
+    "        )\n",
+    "    ),\n",
+    "    yaxis=dict(\n",
+    "        title='Stopwords 數量',\n",
+    "        titlefont=dict(\n",
+    "            family='Courier New, monospace',\n",
+    "            size=18,\n",
+    "            color='#7f7f7f'\n",
+    "        )\n",
+    "    )\n",
+    ")\n",
+    "fig2 = go.Figure(data=data, layout=layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Adeline/150.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 396,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py.iplot(fig2)"
    ]
   },
   {
