--- a/1_preprocessing/user_analysis_v2.ipynb
+++ b/1_preprocessing/user_analysis_v2.ipynb
@@ -232,21 +232,33 @@
    "source": [
     "_x = list(range(len(total[0])))\n",
     "_y = list()\n",
+    "_y2 = list()\n",
     "_z = total[0]\n",
     "for i, s in enumerate(total[1]):\n",
     "    try:\n",
     "        _y.append(round(s/total[2][i],1))\n",
     "    except ZeroDivisionError:\n",
     "        _y.append(0)\n",
+    "    \n",
+    "    _y2.append(round(total[2][i]/total[3][i],1))\n",
     "\n",
-    "trace = go.Scatter(\n",
+    "trace1 = go.Scatter(\n",
     "    x = _x,\n",
     "    y = _y,\n",
     "    hoverinfo='text',\n",
     "    text=_z,\n",
     "    mode = 'lines'\n",
     ")\n",
-    "data = [trace]\n",
+    "\n",
+    "trace2 = go.Scatter(\n",
+    "    x = _x,\n",
+    "    y = _y2,\n",
+    "    hoverinfo='text',\n",
+    "    text=_z,\n",
+    "    mode = 'lines'\n",
+    ")\n",
+    "\n",
+    "data = [trace1, trace2]\n",
     "layout = go.Layout(\n",
     "    title='Stopwords 佔每人每篇推文的數量',\n",
     "    xaxis=dict(\n",
@@ -387,6 +399,89 @@
    ],
    "source": [
     "py.iplot(fig2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 401,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "total3 = [0, 0, 0]\n",
+    "for key in patients:\n",
+    "    _w, _s, _sc = getWordsDict(patients[key].getText())\n",
+    "    total3[0] += sum(_s.values())\n",
+    "    total3[1] += _sc\n",
+    "    total3[2] += len(patients[key].inRangeDf)\n",
+    "    \n",
+    "# 0:Stopwords總數/ 1:含有stopwords的推文總數/ 2:（時間內的）推文總數"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 403,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total4 = [0, 0, 0]\n",
+    "for key in ordinarys:\n",
+    "    _w, _s, _sc = getWordsDict(ordinarys[key].getText())\n",
+    "    total4[0] += sum(_s.values())\n",
+    "    total4[1] += _sc\n",
+    "    total4[2] += len(ordinarys[key].inRangeDf)\n",
+    "\n",
+    "# 0:Stopwords總數/ 1:含有stopwords的推文總數/ 2:（時間內的）推文總數"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 407,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "trace_patients = go.Bar(x=['Type1', 'Type2'],\n",
+    "                  y=[round(total3[0]/total3[1],1), round(total3[1]/total3[2],1)],\n",
+    "                  name='Patients',\n",
+    "                  marker=dict(color='#ffcdd2'))\n",
+    "\n",
+    "trace_ordinarys = go.Bar(x=['Type1', 'Type2'],\n",
+    "                y=[round(total4[0]/total4[1],1), round(total4[1]/total4[2],1)],\n",
+    "                name='Ordinarys',\n",
+    "                marker=dict(color='#A2D5F2'))\n",
+    "\n",
+    "\n",
+    "data = [trace_patients, trace_ordinarys]\n",
+    "layout = go.Layout(title='比較',\n",
+    "                xaxis=dict(title='使用者類型'),\n",
+    "                yaxis=dict(title='平均數量'))\n",
+    "fig3 = go.Figure(data=data, layout=layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Adeline/154.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 408,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py.iplot(fig3)"
    ]
   },
   {
