--- a/1_preprocessing/user_analysis_v2.ipynb
+++ b/1_preprocessing/user_analysis_v2.ipynb
@@ -2,28 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "import datetime\n",
-    "from nltk.tokenize import TweetTokenizer\n",
+    "import ipynb.fs.defs.PeopleInfo as peopleInfo\n",
     "from nltk.corpus import stopwords\n",
+    "from nltk import TweetTokenizer\n",
     "# from nltk.stem.porter import PorterStemmer\n",
     "# 引用 tweetTextHandler.ipynb\n",
     "import ipynb.fs.defs.TweetTextHandler as tweetTextHandler\n",
-    "import operator\n",
     "global stop_words\n",
     "stop_words = stopwords.words('english')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -59,105 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class Patient(object):\n",
-    "    totalCount = 0\n",
-    "    diagnosedTimeAndText = dict()\n",
-    "    with open('../0_dataset/diagnosed_tweets.csv') as open_file:\n",
-    "        for line in open_file.readlines():\n",
-    "            line = line.strip().split('\\t')\n",
-    "            diagnosedTimeAndText[line[1]] = (line[0], line[2])\n",
-    "       \n",
-    "    def __init__(self, name):\n",
-    "        self.name = name\n",
-    "        self.df = pd.read_csv('../0_dataset/DepressionUsersTweets/'+name,sep='\\t',header=None,usecols=[2,3],names=['Date','Text'],quoting=3,error_bad_lines=False,encoding='utf-8',keep_default_na=False).dropna(axis=0, how='any')\n",
-    "        self.diagnosedTime = datetime.datetime.strptime(Patient.diagnosedTimeAndText[name][1], \"%Y-%m-%d %H:%M:%S\")\n",
-    "        self.diagnosedTweet = Patient.diagnosedTimeAndText[name][0]\n",
-    "        \n",
-    "        beforeDiagosedTime = str(self.diagnosedTime - datetime.timedelta(days=90))\n",
-    "        self.inRangeDf = self.df[self.df['Date'].between(beforeDiagosedTime, str(self.diagnosedTime))]\n",
-    "        \n",
-    "        Patient.totalCount += 1 \n",
-    "        \n",
-    "    def displayCount(self):\n",
-    "        print(\"Total Patients {0}\".format(Patient.totalCount))\n",
-    "    \n",
-    "    def displayTweetsCount(self, category='inRange'):\n",
-    "        if category == 'inRange':\n",
-    "            return len(self.inRangeDf)\n",
-    "        elif category == 'all':\n",
-    "            return len(self.df)\n",
-    "        else:\n",
-    "            print('Please indicate category (inRange or all)')\n",
-    "            return False\n",
-    "        \n",
-    "    def getText(self, category='inRange'):\n",
-    "        if category == 'inRange':\n",
-    "            return self.inRangeDf['Text'].values\n",
-    "        elif category == 'all':\n",
-    "            return self.df['Text'].values\n",
-    "        else:\n",
-    "            print('Please indicate category (inRange or all)')\n",
-    "            return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "class Ordinary(object):\n",
-    "    totalCount = 0\n",
-    "\n",
-    "    def __init__(self, name):\n",
-    "        self.name = name\n",
-    "        self.df = pd.read_csv('../0_dataset/ordinaryUsersTweets/'+name,sep='\\t',header=None,usecols=[2,3],names=['Date','Text'],quoting=3,error_bad_lines=False,encoding='utf-8',keep_default_na=False).dropna(axis=0, how='any')\n",
-    "        # The method to get the latest tweet is wrong\n",
-    "        try:\n",
-    "            self.latestTweetTime = datetime.datetime.strptime(str(self.df.iloc[-1]['Date']), \"%Y-%m-%d %H:%M:%S\")\n",
-    "        except:\n",
-    "            print(name)\n",
-    "            raise Exception()\n",
-    "        \n",
-    "        self.latestTweetText = self.df.iloc[-1]['Text']\n",
-    "        beforeLatestTweetTime = str(self.latestTweetTime - datetime.timedelta(days=90))\n",
-    "        self.inRangeDf = self.df[self.df['Date'].between(beforeLatestTweetTime, str(self.latestTweetTime))]\n",
-    "        \n",
-    "        Ordinary.totalCount += 1 \n",
-    "        \n",
-    "    def displayCount(self):\n",
-    "        print(\"Total Ordinarys {0}\".format(Ordinary.totalCount))\n",
-    "    \n",
-    "    def displayTweetsCount(self, category='inRange'):\n",
-    "        if category == 'inRange':\n",
-    "            return len(self.inRangeDf)\n",
-    "        elif category == 'all':\n",
-    "            return len(self.df)\n",
-    "        else:\n",
-    "            print('Please indicate category (inRange or all)')\n",
-    "            return False\n",
-    "        \n",
-    "    def getText(self, category='inRange'):\n",
-    "        if category == 'inRange':\n",
-    "            return self.inRangeDf['Text'].values\n",
-    "        elif category == 'all':\n",
-    "            return self.df['Text'].values\n",
-    "        else:\n",
-    "            print('Please indicate category (inRange or all)')\n",
-    "            return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -169,9 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -179,12 +77,12 @@
     "with open('../0_dataset/patient_ids') as r:\n",
     "    for patient in r.readlines()[:100]:\n",
     "        patient = patient.strip()\n",
-    "        patients[patient] = Patient(patient)"
+    "        patients[patient] = peopleInfo.Patient(patient)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -194,12 +92,12 @@
     "with open('../0_dataset/ordinary_ids') as r:\n",
     "    for ordinary in r.readlines()[:100]:\n",
     "        ordinary = ordinary.strip()\n",
-    "        ordinarys[ordinary] = Ordinary(ordinary)"
+    "        ordinarys[ordinary] = peopleInfo.Ordinary(ordinary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -412,10 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "total4 = [0, 0, 0]\n",
@@ -430,9 +326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -458,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +363,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
