--- a/1_preprocessing/PeopleInfo.ipynb
+++ b/1_preprocessing/PeopleInfo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
     "       \n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
-    "        self.df = pd.read_csv('../0_dataset/DepressionUsersTweets/'+name,sep='\\t',header=None,usecols=[2,3],names=['Date','Text'],quoting=3,error_bad_lines=False,encoding='utf-8',keep_default_na=False).dropna(axis=0, how='any')\n",
+    "        self.df = pd.read_csv('../0_dataset/DepressionUsersTweets/'+name,sep='\\t',header=None,usecols=[2,3],names=['Date','Text'],quoting=3,error_bad_lines=False,encoding='utf-8').dropna(axis=0, how='any')\n",
     "        self.diagnosedTime = datetime.datetime.strptime(Patient.diagnosedTimeAndText[name][1], \"%Y-%m-%d %H:%M:%S\")\n",
     "        self.diagnosedTweet = Patient.diagnosedTimeAndText[name][0]\n",
     "        \n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -74,12 +74,12 @@
     "\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
-    "        self.df = pd.read_csv('../0_dataset/ordinaryUsersTweets/'+name,sep='\\t',header=None,usecols=[2,3],names=['Date','Text'],quoting=3,error_bad_lines=False,encoding='utf-8',keep_default_na=False).dropna(axis=0, how='any')\n",
+    "        self.df = pd.read_csv('../0_dataset/ordinaryUsersTweets/'+name,sep='\\t',header=None,usecols=[2,3],names=['Date','Text'],quoting=3,error_bad_lines=False,encoding='utf-8').dropna(axis=0, how='any')\n",
     "        # The method to get the latest tweet is wrong\n",
     "        try:\n",
     "            self.latestTweetTime = datetime.datetime.strptime(str(self.df.iloc[-1]['Date']), \"%Y-%m-%d %H:%M:%S\")\n",
     "        except:\n",
-    "            print(name)\n",
+    "            print('Error LatestTweetTime:{0}'.format(name))\n",
     "            raise Exception()\n",
     "        \n",
     "        self.latestTweetText = self.df.iloc[-1]['Text']\n",
