--- a/1_preprocessing/filter_users.ipynb
+++ b/1_preprocessing/filter_users.ipynb
@@ -13,6 +13,200 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "patients = dict()\n",
+    "ordinarys = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('../0_dataset/patient_ids') as r:\n",
+    "    for patient in r.readlines():\n",
+    "        patient = patient.strip()\n",
+    "        patients[patient] = peopleInfo.Patient(patient)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('../0_dataset/ordinary_ids') as r:\n",
+    "    for ordinary in r.readlines():\n",
+    "        ordinary = ordinary.strip()\n",
+    "        try:\n",
+    "            ordinarys[ordinary] = peopleInfo.Ordinary(ordinary)\n",
+    "        except:\n",
+    "            pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "patients_bar_dict = dict()\n",
+    "ordinarys_bar_dict = dict()\n",
+    "for i in range(20):\n",
+    "    patients_bar_dict[i] = 0\n",
+    "    ordinarys_bar_dict[i] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for key in patients:\n",
+    "    try:\n",
+    "        num = int(len(patients[key].inRangeDf)/100)-1\n",
+    "        patients_bar_dict[num] += 1\n",
+    "    except KeyError:\n",
+    "        patients_bar_dict[0] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for key in ordinarys:\n",
+    "    try:\n",
+    "        num = int(len(ordinarys[key].inRangeDf)/100)-1\n",
+    "        ordinarys_bar_dict[num] += 1\n",
+    "    except KeyError:\n",
+    "        ordinarys_bar_dict[0] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import plotly\n",
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "plotly.tools.set_credentials_file(username='Adeline', api_key='Z5eltNtBQXqvI05ZFQtz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace_patients = go.Bar(x=list(patients_bar_dict.keys()),\n",
+    "                  y=list(patients_bar_dict.values()),\n",
+    "                  name='Patients',\n",
+    "                  marker=dict(color='#ffcdd2'))\n",
+    "\n",
+    "data = [trace_patients]\n",
+    "\n",
+    "layout = go.Layout(title='比較',\n",
+    "                xaxis=dict(title='發文數量'),\n",
+    "                yaxis=dict(title='使用者數量'))\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Adeline/180.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py.iplot(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "trace_ordinarys = go.Bar(x=list(ordinarys_bar_dict.keys()),\n",
+    "                  y=list(ordinarys_bar_dict.values()),\n",
+    "                  name='Ordinarys',\n",
+    "                  marker=dict(color='#ffcdd2'))\n",
+    "\n",
+    "data = [trace_ordinarys]\n",
+    "\n",
+    "layout = go.Layout(title='比較',\n",
+    "                xaxis=dict(title='發文數量'),\n",
+    "                yaxis=dict(title='使用者數量'))\n",
+    "\n",
+    "fig = go.Figure(data=data, layout=layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Adeline/182.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py.iplot(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
