--- a/1_preprocessing/FilterMethods.ipynb
+++ b/1_preprocessing/FilterMethods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -14,8 +14,8 @@
     "    remove_list = []\n",
     "    for key in total_list:\n",
     "        if len(mydict[key].inRangeDf) == 0:\n",
-    "            print(mydict.pop(key, None).name)\n",
-    "            remove_list.append(mydict.pop(key, None).name)\n",
+    "            del mydict[key]\n",
+    "            remove_list.append(key)\n",
     "            total_list.remove(key)\n",
     "        else:\n",
     "            pass\n",
