--- a/1_preprocessing/filter_users.ipynb
+++ b/1_preprocessing/filter_users.ipynb
@@ -112,6 +112,7 @@
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -189,6 +190,7 @@
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -256,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
