finish tf-idf v1

--- a/1_preprocessing/user_analysis_v2.ipynb
+++ b/1_preprocessing/user_analysis_v2.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "import ipynb.fs.defs.PeopleInfo as peopleInfo\n",
     "from nltk.corpus import stopwords\n",
     "from nltk import TweetTokenizer\n",
@@ -217,6 +221,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def filter_tweet(txt):\n",
+    "    \n",
+    "    try:\n",
+    "        # url\n",
+    "        txt = re.sub(r\"http\\S+\", \"\", txt)\n",
+    "        txt = re.sub(r\"https\\S+\", \"\", txt)\n",
+    "        txt = re.sub(r\"twitter.com/\\S+\", \"\", txt)\n",
+    "        txt = re.sub(r\"pic.twitter.com\\S+\", \"\", txt)\n",
+    "        # mention\n",
+    "        txt = re.sub(r\"@\\S+\", \"\", txt)\n",
+    "    except TypeError as e:\n",
+    "        print(e)\n",
+    "    \n",
+    "    return txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {
     "collapsed": true
@@ -228,43 +256,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 139,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "base_texts = []\n",
     "group_texts = []\n",
     "\n",
     "for key in ordinarys.keys():\n",
-    "    base_texts.extend(['\\n'.join(ordinarys[key].getText())])\n",
-    "        \n",
-    "for key in patients.keys():\n",
-    "    group_texts.extend(['\\n'.join(patients[key].getText())])\n",
+    "    base_texts.append(filter_tweet('\\n'.join(ordinarys[key].getText())))\n",
     "\n",
-    "    corpus = base_texts + group_texts\n",
-    "    vectorizer = TfidfVectorizer(min_df=1)\n",
-    "    X = vectorizer.fit_transform(corpus)\n",
-    "    idf = vectorizer.idf_\n",
-    "#     print (dict(zip(vectorizer.get_feature_names(), idf)))"
+    "for key in patients.keys():\n",
+    "    group_texts.append(filter_tweet('\\n'.join(patients[key].getText())))\n",
+    "\n",
+    "corpus = base_texts + group_texts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98911"
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='sqrt', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=128, n_jobs=-1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "vectorizer = TfidfVectorizer(min_df=1)\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "idf = vectorizer.idf_\n",
+    "Y = np.array([0] * len(base_texts) + [1]*len(group_texts), dtype=int)\n",
+    "classifier  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
+    "classifier.fit(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_indicies = np.argsort(classifier.feature_importances_)\n",
+    "vector2word = vectorizer.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_words = []\n",
+    "for i in range(50):\n",
+    "    vector = feature_indicies[-i-1]\n",
+    "    word = vector2word[vector]\n",
+    "    top_words.append(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['depression',\n",
+       " 'pic',\n",
+       " 'tus',\n",
+       " 'wtf',\n",
+       " 'status',\n",
+       " 'diagnosed',\n",
+       " 'wrong',\n",
+       " 'com',\n",
+       " 'bitch',\n",
+       " 'pick',\n",
+       " 'heart',\n",
+       " 'care',\n",
+       " 'piece',\n",
+       " 'tatus',\n",
+       " 'cry',\n",
+       " 'falling',\n",
+       " 'anxiety',\n",
+       " 'okay',\n",
+       " 'sorry',\n",
+       " 'into',\n",
+       " 'their',\n",
+       " 'goal',\n",
+       " 'never',\n",
+       " 'read',\n",
+       " 'cried',\n",
+       " 'myself',\n",
+       " 'happened',\n",
+       " 'they',\n",
+       " 'am',\n",
+       " 'atus',\n",
+       " 'person',\n",
+       " 'finally',\n",
+       " 'idk',\n",
+       " 'old',\n",
+       " 'and',\n",
+       " 'tho',\n",
+       " 'love',\n",
+       " 'watched',\n",
+       " 'said',\n",
+       " 'alone',\n",
+       " 'friends',\n",
+       " 'felt',\n",
+       " 'deserve',\n",
+       " 'please',\n",
+       " 'you',\n",
+       " 'close',\n",
+       " 'kind',\n",
+       " 'la',\n",
+       " 'easier',\n",
+       " 'favorite']"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "group_texts"
+   ]
   },
   {
    "cell_type": "code",
