train tf-idf model with randomforest

--- a/1_preprocessing/user_analysis_v2.ipynb
+++ b/1_preprocessing/user_analysis_v2.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 211,
    "metadata": {
     "collapsed": true
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 212,
    "metadata": {
     "collapsed": true
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 213,
    "metadata": {
     "collapsed": true
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 214,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -221,10 +221,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~Adeline/184.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "py.iplot(fig3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def filter_tweet(txt):\n",
@@ -235,6 +256,8 @@
     "        txt = re.sub(r\"https\\S+\", \"\", txt)\n",
     "        txt = re.sub(r\"twitter.com/\\S+\", \"\", txt)\n",
     "        txt = re.sub(r\"pic.twitter.com\\S+\", \"\", txt)\n",
+    "        txt = re.sub(r\"\\S+/\\S+\",\"\", txt)\n",
+    "        #txt = re.sub(r\"\\S+\\/status\\S+\", txt)\n",
     "        # mention\n",
     "        txt = re.sub(r\"@\\S+\", \"\", txt)\n",
     "    except TypeError as e:\n",
@@ -256,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 164,
    "metadata": {
     "scrolled": true
    },
@@ -276,7 +299,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 254,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='sqrt', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=128, n_jobs=-1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False)"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer = TfidfVectorizer(stop_words=\"english\",ngram_range = (1,2), min_df=1)\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "idf = vectorizer.idf_\n",
+    "Y = np.array([0] * len(base_texts) + [1]*len(group_texts), dtype=int)\n",
+    "classifier  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
+    "classifier.fit(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_indicies = np.argsort(classifier.feature_importances_)\n",
+    "vector2word = vectorizer.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_words = []\n",
+    "for i in range(50):\n",
+    "    vector = feature_indicies[-i-1]\n",
+    "    word = vector2word[vector]\n",
+    "    top_words.append(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['diagnosed',\n",
+       " 'pic',\n",
+       " 'people',\n",
+       " 'depression',\n",
+       " 'scared',\n",
+       " 'fact',\n",
+       " 'right',\n",
+       " 'feeling',\n",
+       " 'love',\n",
+       " 'pic love',\n",
+       " 'throw',\n",
+       " 'came',\n",
+       " 'ass',\n",
+       " 'fucked',\n",
+       " 'problems',\n",
+       " 'confused',\n",
+       " 'stay',\n",
+       " 'pure',\n",
+       " 'make sure',\n",
+       " 'energy',\n",
+       " 'tho',\n",
+       " 'shit',\n",
+       " 'stop',\n",
+       " 'door',\n",
+       " 'hot',\n",
+       " 'sorry',\n",
+       " 'shitty',\n",
+       " 'ice',\n",
+       " 'lost',\n",
+       " 'thank',\n",
+       " 'watched',\n",
+       " 'honestly',\n",
+       " 'took',\n",
+       " 'll',\n",
+       " 'like just',\n",
+       " '13',\n",
+       " 'words',\n",
+       " 'told',\n",
+       " 'protect',\n",
+       " 'boobs',\n",
+       " 'dude',\n",
+       " 'real',\n",
+       " 'currently',\n",
+       " 'mental',\n",
+       " 'wtf',\n",
+       " 'surprised',\n",
+       " 'laugh',\n",
+       " 'hours',\n",
+       " 'wasn',\n",
+       " 'bit']"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/sklearn/cross_validation.py:41: DeprecationWarning:\n",
+      "\n",
+      "This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.cross_validation import StratifiedShuffleSplit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from random import randint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sss = StratifiedShuffleSplit(Y, 10, random_state=randint(0,65536))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 1 0 1 1 0 0 1 0 0 1 1 1 0 0 1 1 0 0 1 1 1 0 1 1 0 1 1 1 1 0 0 1 0 1 0\n",
+      " 0 0 0 0 1 1 1 0 0 0 1 1 1 0 1 1 0 1 1 1 1 1 1 0 1 0 0 1 0 0 1 1 0 1 0 1 1\n",
+      " 0 0 1 0 0 0 1 0 0 0 0 1 0 1 1 1 1 0 0 0 0 1 1 0 1 1 0 1 1 0 0 0 1 1 1 1 0\n",
+      " 0 0 0 1 0 0 1 0 1 1 0 1 0 0 1 1 1 0 0 0 0 1 1 0 0 0 1 0 1 1 0 0 0 0 1 1 0\n",
+      " 0 1 0 1 1 0 0 0 0 0 1 1 1 1 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "precisions = []\n",
+    "for train_index, test_index in sss:\n",
+    "    \n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    Y_train, Y_test = Y[train_index], Y[test_index]\n",
+    "    classifier = classifier.fit(X_train, Y_train)\n",
+    "    score = classifier.score(X_test, Y_test)\n",
+    "    precisions.append(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.67000000000000004"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(precisions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import export_graphviz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -291,46 +540,50 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vectorizer = TfidfVectorizer(min_df=1)\n",
-    "X = vectorizer.fit_transform(corpus)\n",
-    "idf = vectorizer.idf_\n",
-    "Y = np.array([0] * len(base_texts) + [1]*len(group_texts), dtype=int)\n",
-    "classifier  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
-    "classifier.fit(X,Y)"
+    "vectorizer2 = TfidfVectorizer(stop_words=\"english\",ngram_range = (1,2), min_df=1)\n",
+    "X2 = vectorizer2.fit_transform(group_texts+group_texts)\n",
+    "idf2 = vectorizer2.idf_\n",
+    "Y2 = np.array([0] * len(group_texts) + [1]*len(group_texts), dtype=int)\n",
+    "classifier2  = RandomForestClassifier(n_jobs=-1, max_features=\"sqrt\", n_estimators=128)\n",
+    "classifier2.fit(X2,Y2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
+   "execution_count": 264,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "feature_indicies = np.argsort(classifier.feature_importances_)\n",
-    "vector2word = vectorizer.get_feature_names()"
+    "feature_indicies2 = np.argsort(classifier2.feature_importances_)\n",
+    "vector2word2 = vectorizer2.get_feature_names()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
+   "execution_count": 265,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "top_words = []\n",
+    "top_words2 = []\n",
     "for i in range(50):\n",
-    "    vector = feature_indicies[-i-1]\n",
-    "    word = vector2word[vector]\n",
-    "    top_words.append(word)"
+    "    vector2 = feature_indicies2[-i-1]\n",
+    "    word2 = vector2word2[vector2]\n",
+    "    top_words2.append(word2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 266,
    "metadata": {
     "scrolled": true
    },
@@ -338,86 +591,102 @@
     {
      "data": {
       "text/plain": [
-       "['depression',\n",
-       " 'pic',\n",
-       " 'tus',\n",
-       " 'wtf',\n",
-       " 'status',\n",
-       " 'diagnosed',\n",
-       " 'wrong',\n",
-       " 'com',\n",
-       " 'bitch',\n",
-       " 'pick',\n",
-       " 'heart',\n",
-       " 'care',\n",
-       " 'piece',\n",
-       " 'tatus',\n",
-       " 'cry',\n",
-       " 'falling',\n",
-       " 'anxiety',\n",
-       " 'okay',\n",
-       " 'sorry',\n",
-       " 'into',\n",
-       " 'their',\n",
-       " 'goal',\n",
-       " 'never',\n",
-       " 'read',\n",
-       " 'cried',\n",
-       " 'myself',\n",
-       " 'happened',\n",
-       " 'they',\n",
-       " 'am',\n",
-       " 'atus',\n",
-       " 'person',\n",
-       " 'finally',\n",
-       " 'idk',\n",
-       " 'old',\n",
-       " 'and',\n",
-       " 'tho',\n",
-       " 'love',\n",
-       " 'watched',\n",
-       " 'said',\n",
-       " 'alone',\n",
+       "['caught',\n",
+       " 'second',\n",
+       " 'feel bad',\n",
+       " 'af',\n",
+       " 'does',\n",
+       " 'thanks',\n",
+       " 'feel',\n",
+       " 'really good',\n",
        " 'friends',\n",
-       " 'felt',\n",
-       " 'deserve',\n",
-       " 'please',\n",
-       " 'you',\n",
-       " 'close',\n",
-       " 'kind',\n",
-       " 'la',\n",
-       " 'easier',\n",
-       " 'favorite']"
+       " 'miss',\n",
+       " 'lied',\n",
+       " 'send',\n",
+       " 'new',\n",
+       " 'precious',\n",
+       " 'feels',\n",
+       " 'fellow',\n",
+       " 'year old',\n",
+       " 'truth',\n",
+       " 'born',\n",
+       " 'walk away',\n",
+       " 'hi',\n",
+       " 'sure',\n",
+       " 'stop',\n",
+       " 'song',\n",
+       " 'wonderful',\n",
+       " 'boo',\n",
+       " 'pants',\n",
+       " 'lover',\n",
+       " 'strike',\n",
+       " 'candidate',\n",
+       " 'right',\n",
+       " 'held',\n",
+       " 'sauce',\n",
+       " 'france',\n",
+       " 'gonna',\n",
+       " 'weight',\n",
+       " 'graduation',\n",
+       " 'depression',\n",
+       " 'away',\n",
+       " 'relate',\n",
+       " 'long',\n",
+       " 'love ve',\n",
+       " 'life got',\n",
+       " 'distract',\n",
+       " 'pic',\n",
+       " '30am',\n",
+       " 'cooking',\n",
+       " 'thought thing',\n",
+       " 'register',\n",
+       " 'need']"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_words"
+    "top_words2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sss = StratifiedShuffleSplit(Y2, 1, random_state=randint(0,65536))\n",
+    "precisions2 = []\n",
+    "for train_index, test_index in sss:\n",
+    "    \n",
+    "    X_train, X_test = X2[train_index], X2[test_index]\n",
+    "    Y_train, Y_test = Y2[train_index], Y2[test_index]\n",
+    "    classifier = classifier2.fit(X_train, Y_train)\n",
+    "    score = classifier2.score(X_test, Y_test)\n",
+    "    precisions2.append(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The notebook server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--NotebookApp.iopub_data_rate_limit`.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.052631578947368418"
+      ]
+     },
+     "execution_count": 271,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "group_texts"
+    "np.mean(precisions2)"
    ]
   },
   {
